Fixed alignment issues... Again.

--- a/about.css
+++ b/about.css
@@ -139,7 +139,6 @@ ul {
 }
 
 footer {
-  position: static;
   width: 755px;
   height: 200px;
   margin-left: 30px;
